--- a/static/index.css
+++ b/static/index.css
@@ -171,6 +171,27 @@ body {
     background-color: #1E40AF;
 }
 
+.form-submit2 {
+    background-color: #1eaf2a;
+    color: #FFFFFF;
+    font-size: 0.875rem;
+    font-weight: 500;
+    border: none;
+    border-radius: 0.375rem;
+    padding: 0.75rem 1.5rem;
+    cursor: pointer;
+    transition: background-color 0.15s ease-in-out;
+    width: fit-content;
+    margin: auto;
+    display: block;
+    margin-bottom: 0.5rem;
+    /* Ajustado el margen */
+}
+
+.form-submit2:hover {
+    background-color: #1eaf2a;
+}
+
 /* Estilos responsivos */
 @media screen and (max-width: 768px) {
     .form-container {
