--- a/static/index.css
+++ b/static/index.css
@@ -364,6 +364,16 @@ body {
     transition: 0.3s;
 }
 
+.close3 {
+    color: #fff;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
 .close:hover,
 .close:focus {
     color: #bbb;
