--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
     </div>
     <br>
     <div align="center">
+        <!-- Boton para mostrar grafico de barras -->
         <button id="generateBtn" style="display: inline-block; margin-right: 10px;" class="form-submit">Generar Gráfico
             de
             barras</button>
@@ -25,6 +26,7 @@
             <span class="close">&times;</span>
             <img class="modal-content" id="img01">
         </div>
+        <!-- Boton para mostrar grafico de calor -->
         <button id="generateBtn2" style="display: inline-block; margin-right: 10px;" class="form-submit">Generar Gráfico
             de
             calor</button>
@@ -32,12 +34,21 @@
             <span class="close1">&times;</span>
             <img class="modal-content" id="img012">
         </div>
+        <!-- Boton para mostrar grafico de dispersion -->
         <button id="generateBtn3" style="display: inline-block; margin-right: 10px;" class="form-submit">Generar Gráfico
             de
             dispersion</button>
         <div id="myModal3" class="modal">
             <span class="close2">&times;</span>
             <img class="modal-content" id="img013">
+        </div>
+        <!-- Boton para mostrar grafico de arbol de decision -->
+        <button id="generateBtn4" style="display: inline-block; margin-right: 10px;" class="form-submit">Generar Gráfico
+            de
+            decision</button>
+        <div id="myModal4" class="modal">
+            <span class="close3">&times;</span>
+            <img class="modal-content" id="img014">
         </div>
     </div>
     <div class="form-container">
@@ -441,6 +452,28 @@
                     modalImg.src = "static/dispersion.png";
 
                     var span = document.getElementsByClassName("close2")[0];
+                    span.onclick = function () {
+                        modal.style.display = "none";
+                    }
+                }
+            });
+    });
+
+</script>
+
+<script>
+    //Script para mostrar la grafica de arbol de decision al undirle al boton
+    document.getElementById('generateBtn4').addEventListener('click', function () {
+        fetch('/generate_arbol_decision', { method: 'POST' })
+            .then(response => response.json())
+            .then(data => {
+                if (data.generate_arbol_decision) {
+                    var modal = document.getElementById('myModal4');
+                    var modalImg = document.getElementById("img014");
+                    modal.style.display = "block";
+                    modalImg.src = "static/arbol_decision.png";
+
+                    var span = document.getElementsByClassName("close3")[0];
                     span.onclick = function () {
                         modal.style.display = "none";
                     }
