Agregando comentarios al form de caracteristicas

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,34 +57,41 @@
         </form>
     </div>
     <div class="form-container">
-
         <div class="form-section">
             <h2>Caracteristicas 1</h2>
+
+            <!-- input para la edad -->
             <label for="age" class="form-label">Cual es su edad?</label>
             <input type="number" id="age" name="age" class="form-input" required
                 placeholder="Escriba su respuesta por favor" />
 
+            <!-- input para el colesterol -->
             <label for="cholesterol" class="form-label">En cuanto tiene el nivel de colesterol?</label>
             <input type="number" id="cholesterol" name="cholesterol" class="form-input" required
                 placeholder="Escriba su respuesta por favor" />
 
+            <!-- input para la frecuencia cardiaca -->
             <label for="heart_rate" class="form-label">En cuanto tiene la frecuencia cardíaca?</label>
             <input type="number" id="heart_rate" name="heart_rate" class="form-input" required
                 placeholder="Escriba su respuesta por favor" />
 
+            <!-- input para el nivel de estress -->
             <label for="stress_level" class="form-label">En cuanto tiene el nivel de estrés?</label>
             <input type="number" id="stress_level" name="stress_level" class="form-input" required
                 placeholder="Escriba su respuesta por favor" />
 
+            <!-- input para los trigliceridos -->
             <label for="triglycerides" class="form-label">En cuanto tiene el nivel de triglicéridos?</label>
             <input type="number" id="triglycerides" name="triglycerides" class="form-input" required
                 placeholder="Escriba su respuesta por favor" />
 
+            <!-- input para la actividad fisica -->
             <label for="physical_activity_days_per_week" class="form-label">Cuantos días de actividad física realiza por
                 semana?</label>
             <input type="number" id="physical_activity_days_per_week" name="physical_activity_days_per_week"
                 class="form-input" required placeholder="Escriba su respuesta por favor" />
 
+            <!-- input para horas de sueño por dia -->
             <label for="sleep_hours_per_day" class="form-label">Cuantas horas duerme por día?</label>
             <input type="number" id="sleep_hours_per_day" name="sleep_hours_per_day" class="form-input" required
                 placeholder="Escriba su respuesta por favor" />
