Agregando comentarios al form de caracteristicas #2

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,6 +98,8 @@
         </div>
         <div class="form-section">
             <h2>Caracteristicas 2</h2>
+
+            <!-- input de diabetico -->
             <label for="diabetes" class="form-label">Es diabetico?</label>
             <select id="diabetes" name="diabetes" class="form-select" required>
                 <option value="" disabled selected>Seleccione una respuesta</option>
@@ -105,6 +107,7 @@
                 <option value="0">No</option>
             </select>
 
+            <!-- input por si fuma -->
             <label for="smoking" class="form-label">Fuma?</label>
             <select id="smoking" name="smoking" class="form-select" required>
                 <option value="" disabled selected>Seleccione una respuesta</option>
@@ -112,6 +115,7 @@
                 <option value="0">No</option>
             </select>
 
+            <!-- input por si tiene obesidad -->
             <label for="obesity" class="form-label">Tiene Obesidad?</label>
             <select id="obesity" name="obesity" class="form-select" required>
                 <option value="" disabled selected>Seleccione una respuesta</option>
@@ -119,6 +123,7 @@
                 <option value="0">No</option>
             </select>
 
+            <!-- input por si consume alcohol -->
             <label for="alcohol_consumption" class="form-label">Consume alcohol?</label>
             <select id="alcohol_consumption" name="alcohol_consumption" class="form-select" required>
                 <option value="" disabled selected>Seleccione una respuesta</option>
@@ -126,6 +131,7 @@
                 <option value="0">No</option>
             </select>
 
+            <!-- input por si tiene problemas cardiacos -->
             <label for="previous_heart_problems" class="form-label">Tiene problemas cardiacos previos?</label>
             <select id="previous_heart_problems" name="previous_heart_problems" class="form-select" required>
                 <option value="" disabled selected>Seleccione una respuesta</option>
@@ -133,6 +139,7 @@
                 <option value="0">No</option>
             </select>
 
+            <!-- input por si usa medicamentos -->
             <label for="medication_use" class="form-label">Usa medicamentos?</label>
             <select id="medication_use" name="medication_use" class="form-select" required>
                 <option value="" disabled selected>Seleccione una respuesta</option>
