Comentando los script para el sweetalert utilizados en el proyecto

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario de Síntomas</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" />
+
+    <!-- Cdn para controlar los sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
