Comentando el boton y el navbar de la pagina web sobre ataques al corazon

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -20,7 +20,7 @@
 <body>
 
     <header class="header">
-
+        <!-- Navbar del la pagina web para una mejor navegacion  -->
         <a href="#" class="logo"> <i class="fa-solid fa-heart"></i> Analizador </a>
         <nav class="navbar">
             <a href="#principal">Principal</a>
@@ -28,7 +28,7 @@
             <a href="#funciones">Funciones</a>
             <a href="#analizador">Analizador</a>
         </nav>
-
+        <!-- Boton que redirige al analizador  -->
         <button type="submit" id="analizadorBtn" class="btn"></button>
 
 
