Comentando el parrafo de introduccion en el aplicatio web inicial

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -44,6 +44,7 @@
         <div class="content">
             <h3 style="color: black;">Bienvenido </h3>
 
+            <!-- Parrafo sobre lo que realizara nuestro sistema -->
             <p style="color: black; text-transform: none;">Introduce tus datos en nuestro analizador y verifica si
                 sufres <br> de ataques al corazon, nuestro sistema buscara las mejores recomendaciones dependiedo del
                 resultado.</p>
