Comentando el parrafo de ataques al corazon, para que el cliente sepa del tema

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -71,6 +71,7 @@
                 <img src="static/corazonAbout.png" alt="">
             </div>
 
+            <!-- Parrafo sobre lo que es ataques al corazonm, para darle contexto al cliente sobre el tema -->
             <div class="content">
                 <h3 style="text-transform: none;">Por tu salud ponte pilas!!!</h3>
                 <p style="text-transform: none;">Los ataques al corazón, también conocidos como infartos
