Comentando las funciones que realiza nuestro sistema

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -105,7 +105,7 @@
                 <h3>FORMULARIO DE ENTRADA</h3>
                 <p style="text-transform: none;">Permite al usuario ingresar sus datos de salud.</p>
             </div>
-
+            <!-- Funciones que realiza nuestro sistema -->
             <div class="box">
                 <img src="static/prediccion.png" alt="">
                 <h3>PREDICCIÓN</h3>
