Comentando el script de menu y navbar

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -135,6 +135,8 @@
 
 </html>
 
+<!-- script para personalizar el menu y navbar  -->
+
 <script>
     let menu = document.querySelector("#menu-btn");
     let navbar = document.querySelector(".header .navbar");
