Comentando el script de iframe

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -171,6 +171,7 @@
 </script>
 
 <script>
+    // script para crear un iframe para remplazar el contenido del contenedor con el iframe
     document.getElementById('analizadorBtn').addEventListener('click', function () {
         // Crea el iframe
         const iframe = document.createElement('iframe');
