Comentando el div de funciones relacionadas al formulario

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -98,6 +98,7 @@
 
         <h1 class="heading">Funciones</h1>
 
+        <!-- Funcion que habla acerca del formulario principal que le saldra al usuario para que ponga sus datos -->
         <div class="box-container">
 
             <div class="box">
