Comentando la funcion sobre la interaccion entre el backend y cliente

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -106,7 +106,8 @@
                 <h3>FORMULARIO DE ENTRADA</h3>
                 <p style="text-transform: none;">Permite al usuario ingresar sus datos de salud.</p>
             </div>
-            <!-- Funciones que realiza nuestro sistema -->
+
+            <!-- Funcion que habla acerca como es la interaccion entre el backend y el cliente en cuanto a la prediccion utilizando el algoritmo Ramdon Forest -->
             <div class="box">
                 <img src="static/prediccion.png" alt="">
                 <h3>PREDICCIÓN</h3>
