Comentando la funcion sobre las recomendaciones que da gpt en cuanto al resultado del algoritmo ramdon forest

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -115,6 +115,7 @@
                     se muestra al usuario.</p>
             </div>
 
+            <!-- Funcion que habla acerca de las recomendaciones que puede dar gpt en cuanto al resultado de ataques al corazon o no -->
             <div class="box">
                 <img src="static/recomendaciones.png" alt="">
                 <h3>RECOMENDACIONES</h3>
