Comentando la funcion que permite hacer scroll al chat de recomendaciones

--- a/templates/index.html
+++ b/templates/index.html
@@ -411,6 +411,7 @@
         $(".loader").remove();
     }
 
+    //funcion que permite hacer scroll al chat de recomendaciones
     function scrollChatToBottom() {
         var chatBody = document.getElementById("chatbox");
         chatBody.scrollTop = chatBody.scrollHeight;
