Comentando la funcion que permite cargar un loader pafra simular cargar peticiones por debajo del sistema, se vea mas instuitivo

--- a/templates/index.html
+++ b/templates/index.html
@@ -403,6 +403,7 @@
         }, 50); // Cambia este valor para ajustar la velocidad de la animación
     }
 
+    //funcion para cargar un loader, para simular la carga de las peticiones en el sistema
     function showLoader() {
         $("#chatbox").append("<div class='loader'></div>");
     }
