Comentando la condicion de verificar si los campos en el front estan vacios

--- a/templates/index.html
+++ b/templates/index.html
@@ -212,7 +212,7 @@
         );
         var medicationUse = parseInt($("#medication_use").val());
 
-        // Verificar si algún campo está vacío
+        // Verificar si algún campo está vacío, para obligar al usuario a escribir los campos que requieren dato
         if (
             isNaN(age) ||
             isNaN(cholesterol) ||
