Comentando el form el cual redirige a la vista donde esta el analizador

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -49,6 +49,7 @@
                 sufres <br> de ataques al corazon, nuestro sistema buscara las mejores recomendaciones dependiedo del
                 resultado.</p>
             </p>
+            <!-- Comentando form la cual redirige a la vista donde esta el analizador. -->
             <form id="analizadorForm" action="{{ url_for('Analizador') }}" method="POST">
                 <button type="submit" id="analizadorBtn" class="btn">Hazlo</button>
             </form>
