--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Estiqueta para especificar el titulo de la vista -->
     <title>Formulario de Síntomas</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" />
 
