--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Estiqueta para especificar el titulo de la vista -->
     <title>Formulario de Síntomas</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" />
 
+    <!-- ruta que permite llamar al archivo css donde estan los estilos de esta vista -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" />
     <!-- Cdn para controlar los sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
