Comentano variable de Swiper

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -155,6 +155,7 @@
         navbar.classList.remove('active');
     }
 
+    // Este código configura el deslizador para ser responsive, ajustándose dinámicamente al tamaño de la pantalla del dispositivo del usuario.
 
     var swiper = new Swiper(".team-slider", {
         loop: true,
